todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}  # non persistent volume for caching images
      containers:
        - name: todo-container
          image: dev1abhi/todo-app:1.4
          volumeMounts:
            - name: image-cache
              mountPath: /cache
