todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP  
  selector:
    app: todo 
  ports:
    - port: 1234 # Port exposed outside the cluster
      protocol: TCP
      targetPort: 4000 # Container's actual listening port
